<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/Home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />
    <item
        android:id="@+id/FavouriteRestaurant"
        android:title="@string/favourite_restaurant"
        android:icon="@drawable/ic_favourite"
        />
    <item
        android:id="@+id/orderHistory"
        android:title="Order History"
        android:icon="@drawable/ic_orderhistory"/>
    <item
        android:id="@+id/FAQ"
        android:title="@string/faq"
        android:icon="@drawable/ic_faq"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        />
</group>
</menu>