<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="6dp">
<LinearLayout
    android:id="@+id/RestaurantContent"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="6">
    <ImageView
        android:id="@+id/img_RecyclerRestaurantImage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant_default_image"
        android:contentDescription="@string/imageview_todo" />
    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_RecyclerRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txt_RecyclerRestaurantPricePerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_perpersonprice"
            android:layout_below="@+id/txt_RecyclerRestaurantName"
            android:padding="8dp"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgFavouriteResttaurantIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_notfavouriterestaurant"
            android:contentDescription="@string/imageview_todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_RecyclerRestaurantRating"
            android:text="@string/restaurant_rating"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="4dp"
            android:textColor="#FFC828"
            android:textSize="15sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_below="@+id/imgFavouriteResttaurantIcon"
        />
    </RelativeLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>